# GameEngine

./: .gitignore  CMakeLists.txt
includes/engine/: animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  camera.h  compute_shader.h  entity.h  filesystem.h  mesh.h  model.h  shader.h
includes/engine/core/: application.h  keyboard_manager.h  mouse_manager.h
includes/engine/ecs/: component.h  system.h
includes/engine/graphic/: ui_model.h
resources/objects/player/: Dying.fbx
resources/shaders/: ui.fs  ui.vs
src/: main.cpp
src/base/: animation.cpp  animator.cpp  bone.cpp  camera.cpp  compute_shader.cpp  entity.cpp  mesh.cpp  model.cpp  shader.cpp
src/engine/core/: application.cpp  keyboard_manager.cpp  mouse_manager.cpp
src/engine/ecs/: system.cpp
src/engine/graphic/: ui_model.cpp
